--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://AhmedSayed01.github.io/Portfolio0",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -59,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
