--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
-  "homepage": "asayed.me",
+  "homepage": "https://asayed.me",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
